<resources>
    <string name="app_name">Calculator</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="multiplication">X</string>
    <string name="division">/</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="equality">=</string>
    <string name="comma">,</string>
    <string name="reset">C</string>
    <string name="remove_last_element">&lt;&lt;</string>
    <string name="switch_sign">+/-</string>
    <string name="start_task_with_number_param_msg">Start async task to update view with: %1$d</string>
</resources>
