<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="10dp"
        android:paddingRight="15dp"
        android:textAlignment="viewEnd"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/button_four"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/four"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="183dp" />

        <Button
            android:id="@+id/button_five"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/five"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="183dp" />

        <Button
            android:id="@+id/button_six"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/six"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="183dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/text_view_error">

        <Button
            android:id="@+id/button_seven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/seven"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button_eight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/eight"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button_nine"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/nine"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_one"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/one"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="295dp" />

        <Button
            android:id="@+id/button_two"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/two"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="295dp" />

        <Button
            android:id="@+id/button_three"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/three"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="295dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/button_comma"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/comma"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="354dp" />

        <Button
            android:id="@+id/button_zero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/zero"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="354dp" />

        <Button
            android:id="@+id/button_equality"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:text="@string/equality"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="354dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_reset"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="76dp"
            android:text="@string/reset"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="354dp" />

        <Button
            android:id="@+id/button_division"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="76dp"
            android:text="@string/division"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button_multiplication"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="76dp"
            android:text="@string/multiplication"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="183dp" />

        <Button
            android:id="@+id/button_subtraction"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="76dp"
            android:text="@string/subtraction"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="295dp" />

        <Button
            android:id="@+id/button_addition"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="76dp"
            android:text="@string/addition"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="354dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5">

        <Button
            android:id="@+id/button_remove_last_element"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="76dp"
            android:text="@string/remove_last_element"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="354dp" />

        <Button
            android:id="@+id/button_switch_sign"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="76dp"
            android:text="@string/switch_sign"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="354dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="7dp"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>